update: 새 글 및 설정 수정

--- a/content/book/거북이는 의외로 빨리 헤엄친다.md
+++ b/content/book/거북이는 의외로 빨리 헤엄친다.md
@@ -1,13 +1,28 @@
 ---
-title: "거북이는 의외로 빨리 헤엄친다"
+title: "송섬 <골목의 조>"
 date: 2025-10-23
 draft: false
 ---
 
-#거북이는 의외로 빨리 헤엄친다 
 
-**가장 먼저 리뷰를 쓰고 싶은 영화**
-*내 꿈이 이뤄지는 순간이었거든*
-<u>내가 처음 담당했던 영화야</u>
+엄마의 부재와 아버지의 자살이라는 유년시절을 보낸 '나', 사회에 잘 적응하지 못하고 연애도 늘 좋지 않은 방향으로 끝나버리는 삶을 살다가 우연히 골목 안 술집의 사장님 '조'를 만나게 되면서 겪게 되는 이야기. 
 
-![스틸컷](/content/cinema/cinema01_01.jpg)
+어느 날 아침에 갑자기 방 한구석 벽 모서리에 나타났다가 또 어느 날 갑자기 사라져버린 아저씨, 자고 일어났더니 차가운 시체가 되어있던 고양이 설리, 기차 선로에 직각으로 누워 죽음을 맞이한 조. 그리고 현관문에 목을 매달고 죽은 아빠까지. 
+
+
+
+
+언젠가 사람들은 일기장에도 거짓말을 쓴다는 사실을 알아차리고는 기분이 더러워져 소리를 지르며 울었다. 
+
+말의 의미를 이해하려고 노력하는 대신 가벼운 신음 소리를 내며 어깨를 들썩인다. 이것은 꽤 효과적이다. 대답하지 않으면 사람들은 자기가 원하는 대답을 들었다고 생각해버린다.
+
+"기후가 인류의 역사를 어떻게 바꾸었는가." "기후가 뭘 할 수 있는데?" "가뭄이 들고, 메뚜기 떼가 찾아오고, 화산이 터지고, 지진이 나면 기근이 찾아오거나 전염병이 돌아. 그럼 할 수 없이 역사도 흘러가던 방향에서 벗어나게 되지. <u>사람은 사실 바람의 방향대로 살아.</u>**" (인도네시아 탐보라 화산, 성층권으로 올라간 화산재, 오랫동안 그자리에 머물게 됨, 화산재가 태양을 가려 이삭이 여물지 않고, 기근이 계속됨, 추수할 곡식이 없으니 사료도 건초도 부족, 타고 다닐 가축이 없어지자 자전거가 발명. 기근이 계속 이어지자 영유아 사망률이 증가, 작가 메리 셸리도 그 시기 여러 번의 유산을 겪음, 죽음에서 돌아온 존재, 프랑켄슈타인데 대한 이야기를 쓰게 됨)
+
+정체성은 늘, 그리고 항상 상처에 뿌리를 두게 된다. 라캉이었던가? (...) 라캉이었던 것 같다.
+
+"버려야 하는 물건들이 너무 많아." "굳이 버리지 않아도 돼. 그곳에 있다는 걸 잊어버리면 없는 것이나 마찬가지야"
+
+다음에서 다음으로 나아가면서 나는 이전의 세계를 꼭 닫고 나와야 했어. 들키고 싶지 않았거든. 반복하다 보니 남아 있는 친구는 하나도 없었어."
+
+나와 밤비를 돌보던 것은 분명히 설리였다. 우리는 그 빈자리를 어찌해야 할지 몰라 아주 오랜 시간을 헤맬 예정이었다. 나는 이렇게 생각하고 또 울었다. 어째서 모든 죽음은 이렇게도 일방적인 것인지 알 수 없었다.
+
